--- a/app/globals.css
+++ b/app/globals.css
@@ -1,10 +1,10 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
-@custom-variant dark (&:is(.dark *));
+/* @custom-variant dark (&:is(.dark *)); */
 
-@theme inline {
-  --color-background: var(--background);
+/* @theme inline { */
+/* --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
@@ -119,4 +119,4 @@
   body {
     @apply bg-background text-foreground;
   }
-}
+} */
